@@ -1,98 +1,0 @@
-data extracted from 
-https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/statistik-och-analyser/bekraftade-fall-i-sverige/
-
-år	veckonummer	KnKod	KnNamn	Stadsdel	Kommun_stadsdel	tot_antal_fall_per10000inv	antal_fall_per10000_inv	tot_antal_fall	nya_fall_vecka
-2020	1	1281	Lund		Lund	0	0	0	0
-2020	2	1281	Lund		Lund	0	0	0	0
-2020	3	1281	Lund		Lund	0	0	0	0
-2020	4	1281	Lund		Lund	0	0	0	0
-2020	5	1281	Lund		Lund	0	0	0	0
-2020	6	1281	Lund		Lund	0	0	0	0
-2020	7	1281	Lund		Lund	0	0	0	0
-2020	8	1281	Lund		Lund	0	0	0	0
-2020	9	1281	Lund		Lund	0	0	0	0
-2020	10	1281	Lund		Lund	0	0	15	15
-2020	11	1281	Lund		Lund	2	1	19	18
-2020	12	1281	Lund		Lund	2	1	26	7
-2020	13	1281	Lund		Lund	3	1	34	8
-2020	14	1281	Lund		Lund	3	0	37	3
-2020	15	1281	Lund		Lund	3	0	43	6
-2020	16	1281	Lund		Lund	4	0	47	4
-2020	17	1281	Lund		Lund	4	0	49	2
-2020	18	1281	Lund		Lund	5	1	57	8
-2020	19	1281	Lund		Lund	6	1	73	16
-2020	20	1281	Lund		Lund	7	1	91	18
-2020	21	1281	Lund		Lund	10	3	124	33
-2020	22	1281	Lund		Lund	12	2	152	28
-2020	23	1281	Lund		Lund	15	3	186	34
-2020	24	1281	Lund		Lund	17	2	208	22
-2020	25	1281	Lund		Lund	18	2	231	23
-2020	26	1281	Lund		Lund	20	2	256	25
-2020	27	1281	Lund		Lund	21	1	267	11
-2020	28	1281	Lund		Lund	23	1	284	17
-2020	29	1281	Lund		Lund	24	2	303	19
-2020	30	1281	Lund		Lund	25	1	311	8
-2020	31	1281	Lund		Lund	26	2	330	19
-2020	32	1281	Lund		Lund	28	2	349	19
-2020	33	1281	Lund		Lund	30	2	369	20
-2020	34	1281	Lund		Lund	31	2	389	20
-2020	35	1281	Lund		Lund	33	2	409	20
-2020	36	1281	Lund		Lund	34	1	419	10
-2020	37	1281	Lund		Lund	34	1	431	12
-2020	38	1281	Lund		Lund	36	1	447	16
-2020	39	1281	Lund		Lund	38	2	476	29
-2020	40	1281	Lund		Lund	41	3	511	35
-2020	41	1281	Lund		Lund	43	2	532	21
-2020	42	1281	Lund		Lund	46	3	570	38
-2020	43	1281	Lund		Lund	51	5	636	66
-2020	44	1281	Lund		Lund	62	11	775	139
-2020	45	1281	Lund		Lund	76	14	949	174
-2020	46	1281	Lund		Lund	98	22	1230	281
-2020	47	1281	Lund		Lund	116	18	1453	223
-2020	48	1281	Lund		Lund	143	27	1788	335
-2020	49	1281	Lund		Lund	186	43	2319	531
-2020	50	1281	Lund		Lund	244	59	3052	733
-2020	51	1281	Lund		Lund	303	59	3783	731
-2020	52	1281	Lund		Lund	360	57	4497	714
-2020	53	1281	Lund		Lund	414	54	5176	679
-2021	1	1281	Lund		Lund	467	56	5876	700
-2021	2	1281	Lund		Lund	503	37	6338	462
-2021	3	1281	Lund		Lund	531	28	6692	354
-2021	4	1281	Lund		Lund	553	22	6964	272
-2021	5	1281	Lund		Lund	569	16	7169	205
-2021	6	1281	Lund		Lund	584	14	7349	180
-2021	7	1281	Lund		Lund	597	13	7516	167
-2021	8	1281	Lund		Lund	608	12	7663	147
-2021	9	1281	Lund		Lund	622	13	7829	166
-2021	10	1281	Lund		Lund	633	11	7970	141
-2021	11	1281	Lund		Lund	647	14	8147	177
-2021	12	1281	Lund		Lund	672	25	8458	311
-2021	13	1281	Lund		Lund	689	17	8678	220
-2021	14	1281	Lund		Lund	710	21	8943	265
-2021	15	1281	Lund		Lund	734	24	9239	296
-2021	16	1281	Lund		Lund	759	25	9557	318
-2021	17	1281	Lund		Lund	789	30	9934	377
-2021	18	1281	Lund		Lund	820	32	10331	397
-2021	19	1281	Lund		Lund	845	25	10647	316
-2021	20	1281	Lund		Lund	860	15	10832	185
-2021	21	1281	Lund		Lund	864	4	10879	47
-2021	22	1281	Lund		Lund	871	7	10972	93
-2021	23	1281	Lund		Lund	874	3	11013	41
-2021	24	1281	Lund		Lund	878	3	11053	40
-2021	25	1281	Lund		Lund	880	3	11085	32
-2021	26	1281	Lund		Lund	883	2	11115	30
-2021	27	1281	Lund		Lund	884	2	11136	21
-2021	28	1281	Lund		Lund	886	2	11164	28
-2021	29	1281	Lund		Lund	890	3	11208	44
-2021	30	1281	Lund		Lund	893	3	11252	44
-2021	31	1281	Lund		Lund	898	4	11307	55
-2021	32	1281	Lund		Lund	902	4	11357	50
-2021	33	1281	Lund		Lund	908	7	11439	82
-2021	34	1281	Lund		Lund	914	6	11514	75
-2021	35	1281	Lund		Lund	922	8	11612	98
-2021	36	1281	Lund		Lund	929	7	11695	83
-2021	37	1281	Lund		Lund	932	3	11736	41
-2021	38	1281	Lund		Lund	934	2	11763	27
-2021	39	1281	Lund		Lund	935	1	11778	15
-2021	40	1281	Lund		Lund	936	1	11790	12
-2021	41	1281	Lund		Lund	939	3	11829	39
