@@ -1,3 +1,7 @@
+02:11:2021
+Improve the classes Analyse_Monthly and Analyse_Corona, adding more parameters. --QL
+
+
 01:11:2021
 Added a ROOT script called "avg_periodtemp.C" which contains a function "temperature_over_two_periods" taking 2 pairs of ints and a WeatherDataVec
 as input. Using each pair of ints, it constructs a histogram containing the average temperature for each day of the period defined by the two ints,
